kubernetes/traefik/traefik-demo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-demo-v1
  labels:
    app: traefik-demo
    version: v1
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-demo
      version: v1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
        prometheus.io/path: "/metrics"
      labels:
        app: traefik-demo
        version: v1
    spec:
      containers:
        - name: productpage
          image: docker.io/istio/examples-bookinfo-productpage-v1:1.19.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
