kubernetes/traefik/whoami-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami-deploy
  labels:
    app: whoami
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
