kubernetes/traefik/whoami-services.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: demo
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: whoami
